// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SignMessage should render 1`] = `
<DocumentFragment>
  <div
    class="overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-auto bg-theme-secondary-900-rgba bg-opacity-60 dark:bg-black-rgba dark:bg-opacity-80 md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="css-1nvh1sc"
      tabindex="-1"
    >
      <div
        class="relative flex min-h-full flex-col overflow-hidden bg-theme-background shadow-2xl sm:mb-0 md:h-auto md:rounded-2.5xl px-10 pt-10 pb-24 sm:pb-10"
        data-testid="Modal__inner"
      >
        <div
          class="absolute top-0 right-0 z-10 mt-5 mr-5 rounded bg-theme-primary-100 transition-all duration-100 ease-linear hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400"
        >
          <button
            class="h-11 w-11 css-12xyeiw"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="css-v0ob3f"
                height="16"
                width="16"
              >
                <svg>
                  cross.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative space-y-4"
        >
          <div
            class="flex-1"
          >
            <form
              class="space-y-5"
              data-testid="SignMessage"
            >
              <div>
                <div
                  data-testid="tab-pabel__active-panel"
                >
                  <section
                    class="space-y-5"
                  >
                    <div
                      class="flex items-end justify-between bg-theme-background"
                    >
                      <div
                        class="space-y-4"
                      >
                        <h1
                          class="mb-0 text-2xl"
                          data-testid="header__title"
                        >
                          Sign Message
                        </h1>
                        <div
                          class="flex items-center text-theme-secondary-text"
                          data-testid="header__subtitle"
                        >
                          Provide a message below and sign with your mnemonic passphrase.
                        </div>
                      </div>
                    </div>
                    <fieldset
                      class="flex flex-col css-1bcidjh"
                    >
                      <label
                        class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
                        data-testid="FormLabel"
                        for="signatory-address"
                      >
                        Signatory
                      </label>
                      <div
                        class="css-n29l73"
                        disabled=""
                      >
                        <div
                          class="shrink-0 css-8zckym"
                          data-testid="Avatar"
                        >
                          <div
                            class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
                          >
                            <img
                              alt="DABCrsfEqhtdzmBrE2AU5NNmdUFCGXKEkr"
                              src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"55\\" cx=\\"40\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"60\\" cx=\\"30\\" cy=\\"40\\" fill=\\"rgb(233, 30, 99)\\"/></svg>"
                              title="DABCrsfEqhtdzmBrE2AU5NNmdUFCGXKEkr"
                            />
                          </div>
                        </div>
                        <div
                          class="relative flex h-full flex-1"
                        >
                          <input
                            autocomplete="off"
                            class="no-ligatures w-full border-none font-semibold text-theme-secondary-text css-1nupw50"
                            data-testid="Input"
                            disabled=""
                            name="signatory-address"
                            type="text"
                            value="DABCrsfEqhtdzmBrE2AU5NNmdUFCGXKEkr"
                          />
                        </div>
                      </div>
                    </fieldset>
                    <fieldset
                      class="flex flex-col css-1bcidjh"
                    >
                      <label
                        class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
                        data-testid="FormLabel"
                        for="message"
                      >
                        Message
                      </label>
                      <div
                        class=" css-1psxlcd"
                      >
                        <div
                          class="relative flex h-full flex-1"
                        >
                          <input
                            autocomplete="off"
                            class="no-ligatures w-full border-none css-1nupw50"
                            data-testid="SignMessage__message-input"
                            name="message"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                    </fieldset>
                    <fieldset
                      class="flex flex-col css-1bcidjh"
                    >
                      <label
                        class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
                        data-testid="FormLabel"
                        for="mnemonic"
                      >
                        Mnemonic
                      </label>
                      <div
                        class="css-1psxlcd"
                      >
                        <div
                          class="relative flex h-full flex-1"
                        >
                          <input
                            autocomplete="off"
                            class="no-ligatures w-full border-none css-1nupw50"
                            data-testid="SignMessage__mnemonic-input"
                            name="mnemonic"
                            type="password"
                            value=""
                          />
                        </div>
                        <div
                          class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                          data-testid="Input__addon-end"
                        >
                          <div
                            class=""
                          >
                            <button
                              class="ring-focus relative flex h-full w-full items-center justify-center text-2xl focus:outline-none"
                              data-ring-focus-margin="-m-1"
                              data-testid="InputPassword__toggle"
                              type="button"
                            >
                              <div
                                class="css-1i4b0eq"
                                height="20"
                                width="20"
                              >
                                <svg>
                                  eye.svg
                                </svg>
                              </div>
                            </button>
                          </div>
                        </div>
                      </div>
                    </fieldset>
                  </section>
                </div>
                <div
                  class="css-ngzslp"
                >
                  <button
                    class="css-1jhy6v9"
                    data-testid="SignMessage__cancel-button"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      Cancel
                    </div>
                  </button>
                  <button
                    class="css-1yqe28v"
                    data-testid="SignMessage__submit-button"
                    disabled=""
                    type="submit"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      Sign
                    </div>
                  </button>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SignMessage should render for ledger wallets 1`] = `
<DocumentFragment>
  <div
    class="overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-auto bg-theme-secondary-900-rgba bg-opacity-60 dark:bg-black-rgba dark:bg-opacity-80 md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="css-1nvh1sc"
      tabindex="-1"
    >
      <div
        class="relative flex min-h-full flex-col overflow-hidden bg-theme-background shadow-2xl sm:mb-0 md:h-auto md:rounded-2.5xl px-10 pt-10 pb-24 sm:pb-10"
        data-testid="Modal__inner"
      >
        <div
          class="absolute top-0 right-0 z-10 mt-5 mr-5 rounded bg-theme-primary-100 transition-all duration-100 ease-linear hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400"
        >
          <button
            class="h-11 w-11 css-12xyeiw"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="css-v0ob3f"
                height="16"
                width="16"
              >
                <svg>
                  cross.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative space-y-4"
        >
          <div
            class="flex-1"
          >
            <form
              class="space-y-5"
              data-testid="SignMessage"
            >
              <div>
                <div
                  data-testid="tab-pabel__active-panel"
                >
                  <section
                    class="space-y-5"
                  >
                    <div
                      class="flex items-end justify-between bg-theme-background"
                    >
                      <div
                        class="space-y-4"
                      >
                        <h1
                          class="mb-0 text-2xl"
                          data-testid="header__title"
                        >
                          Sign Message
                        </h1>
                        <div
                          class="flex items-center text-theme-secondary-text"
                          data-testid="header__subtitle"
                        >
                          Provide a message below and sign with your ledger.
                        </div>
                      </div>
                    </div>
                    <fieldset
                      class="flex flex-col css-1bcidjh"
                    >
                      <label
                        class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
                        data-testid="FormLabel"
                        for="signatory-address"
                      >
                        Signatory
                      </label>
                      <div
                        class="css-n29l73"
                        disabled=""
                      >
                        <div
                          class="shrink-0 css-8zckym"
                          data-testid="Avatar"
                        >
                          <div
                            class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
                          >
                            <img
                              alt="DABCrsfEqhtdzmBrE2AU5NNmdUFCGXKEkr"
                              src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"55\\" cx=\\"40\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"60\\" cx=\\"30\\" cy=\\"40\\" fill=\\"rgb(233, 30, 99)\\"/></svg>"
                              title="DABCrsfEqhtdzmBrE2AU5NNmdUFCGXKEkr"
                            />
                          </div>
                        </div>
                        <div
                          class="relative flex h-full flex-1"
                        >
                          <input
                            autocomplete="off"
                            class="no-ligatures w-full border-none font-semibold text-theme-secondary-text css-1nupw50"
                            data-testid="Input"
                            disabled=""
                            name="signatory-address"
                            type="text"
                            value="DABCrsfEqhtdzmBrE2AU5NNmdUFCGXKEkr"
                          />
                        </div>
                      </div>
                    </fieldset>
                    <fieldset
                      class="flex flex-col css-1bcidjh"
                    >
                      <label
                        class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
                        data-testid="FormLabel"
                        for="message"
                      >
                        Message
                      </label>
                      <div
                        class=" css-1psxlcd"
                      >
                        <div
                          class="relative flex h-full flex-1"
                        >
                          <input
                            autocomplete="off"
                            class="no-ligatures w-full border-none css-1nupw50"
                            data-testid="SignMessage__message-input"
                            name="message"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                    </fieldset>
                  </section>
                </div>
                <div
                  class="css-ngzslp"
                >
                  <button
                    class="css-1jhy6v9"
                    data-testid="SignMessage__cancel-button"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      Cancel
                    </div>
                  </button>
                  <button
                    class="css-1yqe28v"
                    data-testid="SignMessage__submit-button"
                    disabled=""
                    type="submit"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      Sign
                    </div>
                  </button>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SignMessage should render signed step with wallet alias 1`] = `
<div>
  <section>
    <div
      class="flex items-end justify-between bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          Message Successfully Signed
        </h1>
      </div>
    </div>
    <div
      class="no-ligatures mt-4 md:mt-2 css-s5w13h"
      data-testid="TransactionDetail"
    >
      <div
        class="w-40 flex-1 space-y-2 whitespace-nowrap"
        data-testid="TransactionDetail--desktop"
      >
        <div
          class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          Signatory
        </div>
        <div
          class="flex items-center font-semibold"
        >
          <div
            class="w-0 flex-1 text-right md:text-left"
          >
            <div
              class="no-ligatures flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
            >
              <span
                class="font-semibold text-base text-theme-text"
                data-testid="Address__alias"
              >
                <span
                  class="css-u3jrna"
                  data-testid="TruncateEnd"
                >
                  my-alias
                </span>
              </span>
              <span
                class="min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                data-testid="Address__address"
              >
                DABCrsfEqhtdzmBrE2AU5NNmdUFCGXKEkr
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="shrink-0 css-8d0u1i"
        data-testid="Avatar"
      >
        <div
          class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
        >
          <img
            alt="DABCrsfEqhtdzmBrE2AU5NNmdUFCGXKEkr"
            src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"55\\" cx=\\"40\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"60\\" cx=\\"30\\" cy=\\"40\\" fill=\\"rgb(233, 30, 99)\\"/></svg>"
            title="DABCrsfEqhtdzmBrE2AU5NNmdUFCGXKEkr"
          />
        </div>
      </div>
    </div>
    <div
      class="no-ligatures css-s5w13h"
      data-testid="TransactionDetail"
    >
      <div
        class="w-40 flex-1 space-y-2 whitespace-nowrap"
        data-testid="TransactionDetail--desktop"
      >
        <div
          class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          Message
        </div>
        <div
          class="flex items-center font-semibold"
        >
          <span
            class="min-w-0 whitespace-normal break-words text-right md:text-left"
          >
            Hello World
          </span>
        </div>
      </div>
    </div>
    <div
      class="pt-4 md:pt-6"
    >
      <fieldset
        class="flex flex-col css-1bcidjh"
      >
        <label
          class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
          data-testid="FormLabel"
          for="json-signature"
        >
          Signature
        </label>
        <div
          class="py-4 css-qner8f"
          disabled=""
        >
          <div
            class="relative flex h-full flex-1"
          >
            <textarea
              autocomplete="off"
              class="no-ligatures w-full border-none resize-none text-theme-secondary-text css-1nupw50"
              data-testid="TextArea"
              disabled=""
              name="signature"
              style="height: 4px;"
              type="text"
              wrap="hard"
            >
              {"message":"Hello World","signatory":"03d7001f0cfff639c0e458356581c919d5885868f14f72ba3be74c8f105cce34ac","signature":"e16e8badc6475e2eb4eb814fa0ae434e9ca2240b6131f3bf560969989366baa270786fb87ae2fe2945d60408cedc0a757768ebc768b03bf78e5e9b7a20291ac6"}
            </textarea>
          </div>
        </div>
      </fieldset>
    </div>
  </section>
</div>
`;
